# a2a-client-ui

./: .gitignore  LICENSE  README.md  README.zh-CN.md  package-lock.json  package.json  pnpm-lock.yaml
config/: config.ts
public/: splash.html
src/: global.less
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/icons/backup/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/db/: a2a_db.rs  mod.rs  model_db.rs  rusqlite.rs
src-tauri/src/handler/: a2a_server.rs  chat.rs  mod.rs
src-tauri/src/model/: mod.rs
src-tauri/src/webview/: native.rs
src/components/: index.ts
src/components/ChangelogModal/: index.tsx  style.less
src/components/LoadingSpinner/: index.tsx  style.less
src/consts/: agent.ts
src/layouts/TabLayout/: index.tsx
src/pages/a2a/: index.tsx  style.less
src/pages/a2a/components/: AgentStatusIndicator.tsx  ChatInput.tsx  ConfigModal.tsx  MessageItem.tsx  MessageList.tsx  StatusIndicator.tsx  index.ts
src/pages/a2a/hooks/: index.ts  useChatLogic.ts  useConfigManagement.ts
src/pages/connection/: index.tsx
src/pages/settings/: index.tsx  style.less
src/request/ipc/: invoke.ts  invokeSettingA2A.ts  invokeSettingModel.ts
src/routes/: index.ts
src/store/: a2a.ts  chat.ts  setting.ts
src/types/: a2a.ts  chat.ts  invoke.ts  setting.ts  tab.ts
src/utils/: TauriEventListener.ts  a2aClient.ts  a2aWorkflow.ts  date.ts  hooks.ts  json.ts  markdown.ts  monaco.ts  streamingChat.ts  xml.ts
src/utils/ReAct/: a2a.ts  a2aHostAgent.ts  a2aSystemPropmt.ts  llm.ts  reActFacade.ts
src/utils/chat/: chat.ts
(+18 files in other folders)
