[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2024"
rust-version = "1.85"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.6.2", features = [] }
tauri-plugin-log = "2.6.0"
window-vibrancy = "0.5.2"
raw-window-handle = "0.6.2"
rusqlite = { version = "0.32.1", features = ["bundled"] }
lazy_static = "1.4.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
anyhow = { version = "1.0.98", features = ["backtrace"] }
futures-util = "0.3"
ai = { version = "0.2.16"}


[target."cfg(target_os = \"windows\")".dependencies]
# Windows platform uses transparent background
windows = { version = "0.52", features = ["Win32_UI_WindowsAndMessaging"] }

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.26.0"
objc = "0.2"
